[package]
name = "bookmark"
version = "0.1.0"
authors = ["Javier Honduvilla Coto <javierhonduco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.*"
structopt = "0.3.*"
nix = "0.26.*"
more-asserts = "0.3.*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.*"
rayon = "1.7.*"
